# game

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/engine/: engine.hpp  resource.hpp  types.hpp
engine/src/engine/: application.cpp  engine.cpp
engine/src/resource/: mesh_loader.cpp  texture_loader.cpp
resources/: Cube.blend  Cube.mtl  SkyBox.blend  SkyBox.mtl  Sphere.blend  Sphere.mtl
shaders/: LightPixelShader.hlsl  LightVertexShader.hlsl  SolidPixelShader.hlsl
src/: helper.hpp  main.cpp
